--- a/Documentation/abstract.tex
+++ b/Documentation/abstract.tex
@@ -1,3 +1,3 @@
-A typical datacenter today hosts tens of hundereds of VMs on a single physical machine, backed up by storage devices with hundreds of Gigabytes to tera bytes in size. Datacenter vendors usually use hard disk drives for their bakend storage as it is cheap and reliable. The disadvantage of this type of storage is that the I/O accesses to these devices is very slow and are not suitable for applications requiring low latency such as interactive applications.
+A typical datacenter today hosts tens of hundreds of VMs on a single physical machine, backed up by storage devices with hundreds of Gigabytes to Terabytes in size. Data center vendors usually use hard disk drives for their back-end storage as it is cheap and reliable. The disadvantage of this type of storage is that the I/O accesses to these devices is very slow and are not suitable for applications requiring low latency such as interactive applications.
 
-In this paper we present Flash Cache, a simulation of a two-layer flash based caching technique, that uses a combination of and two devices of varied speed and cost such as SSD, PCIE SSD, NVM, etc. for caching. Our algorithm partitions the two caches dynamically on runtime according to the VMs workload and their priority. We use a hueristic optimization technique that ensures maximum utilization of the two caches resulting in a high hit rate. We use a weighted LRU cache eviction policy that demonstrates latency improvement upto YY times and throughput by ZZ times for a cost of \$K per GB of cache; a XX times overall improvement compared to naive algorithms.
+In this paper we present Flash Cache, a simulation of a two-layer flash based caching technique, that uses a combination of and two devices of varied speed and cost such as SSD, PCIE SSD, NVM, etc. for caching. Our algorithm partitions the two caches dynamically on runtime according to the VMs workload and their priority. We use a heuristic optimization technique that ensures maximum utilization of the two caches resulting in a high hit rate. We use a weighted LRU cache eviction policy that demonstrates latency improvement up to YY times and throughput by ZZ times for a cost of \$K per GB of cache; a XX times overall improvement compared to naive algorithms.
