--- a/Documentation/overview.tex
+++ b/Documentation/overview.tex
@@ -1,22 +1,22 @@
 \section{Overview}
 
 \subsection{Hit Ratio Curves}
-
+\note{Would like to seaprate this section into two - Reuse distance and HRC}
 \emph{Hit Ratio Curves} (HRC) as a function of cache size gives us an estimate of the percentage of cache hits for any given cache size. A common method to calculate the HRC is by calculating the \emph{Reuse Distance} for every block request. A Reuse Distance (RD) is the number of unique blocks between two consecutive accesses of a given block.
 
-RD calculation for every block for a workload is computationally intensive. All the block requests for a given workload needs to be saved in the memory, and for every block request, the previous occurrence of that request has to be found and the number of unique elements between the two occurrences needs to be calculated. Until recently, it has been fairly expensive to calculate RD due to the large working set sizes. A naive implementation of Mattson's algorithm~\cite{mattson_evaluation_1970} takes $\mathcal{O}(n\log{n})$ space and $\mathcal{O}(n\log{n.m})$ runtime where $n$ is the size of the workload, and $m$ is the number of unique blocks requests in the workload. Standard implementations of the mattson's algorithm use a combination of balanced tree to locate the previous reference of a block, and a hash table for quick lookups into the tree. This method encures $\mathcal{O}(n\log(m))$ space and $\mathcal{O}(m)$ time.
+RD calculation for every block for a workload is computationally intensive. All the block requests for a given workload needs to be saved in the memory, and for every block request, the previous occurrence of that request has to be found and the number of unique elements between the two occurrences needs to be calculated. Until recently, it has been fairly expensive to calculate RD due to the large working set sizes. A naive implementation of Mattson's algorithm~\cite{mattson_evaluation_1970} takes $\mathcal{O}(n\log{n})$ space and $\mathcal{O}(n\log{n.m})$ runtime where $n$ is the size of the workload, and $m$ is the number of unique blocks requests in the workload. Standard implementations of the Mattson's algorithm use a combination of balanced tree to locate the previous reference of a block, and a hash table for quick lookups into the tree. This method encures $\mathcal{O}(n\log(m))$ space and $\mathcal{O}(m)$ time.
 
-Recently there have been works~\cite{niu_parda:_2012, waldspurger_efficient_2015, wires_characterizing_2014} that calculate RD in sublinear time with constant space. CounterStack algorithm uses a counter for each of the block request, that holds the counter for the number of blocks requested after the counter for a particular block has been initialized. Comparing the counter of a block with other blocks give the RD of that block. The space is exponentially reduced by the usage of Hyperloglog~\cite{flajolet_hyperloglog:_2007} data structure for each of the counters and by various other techniques such as downsampling.
+Recently there have been works~\cite{niu_parda:_2012, waldspurger_efficient_2015, wires_characterizing_2014} that calculate RD in sublinear time with constant space. CounterStack algorithm uses a counter for each of the block request, that holds the counter for the number of blocks requested after the counter for a particular block has been initialized. Comparing the counter of a block with other blocks give the RD of that block. The space is exponentially reduced by the usage of Hyperloglog~\cite{flajolet_hyperloglog:_2007} data structure for each of the counters and by various other techniques such as down sampling.
 
-Shards on the other hand uses hash based spatial sampling techchinique to calculate approximate Hit Ratio Curves. For each reference to a Logical Block Address (LBA), the hash value of the LBA is taken and if the modulo the value by a user defined constant, the LBA is used to calculate the RD. If the resulting value is lesser than user defined threshold, the block address is retained for calculating RD, if not, the block address is discarded. The authors of Shards claim that by just using the very minimal sample of uniformly distrubuted block addresses, they are able to calculate the RD values with very little error.
+Shards on the other hand uses hash based spatial sampling technique to calculate approximate Hit Ratio Curves. For each reference to a Logical Block Address (LBA), the hash value of the LBA is taken and if the modulo the value by a user defined constant, the LBA is used to calculate the RD. If the resulting value is lesser than user defined threshold, the block address is retained for calculating RD, if not, the block address is discarded. The authors of Shards claim that by just using the very minimal sample of uniformly distributed block addresses, they are able to calculate the RD values with very little error.
 
-In our work, we calculate the Reuse Distance values using the open source implementation of PARDA~\cite{niu_parda:_2012}. PARDA uses a hash table that maps a LBA to its most recent reference, and a splay tree that holds the values of the number of distinct locations referenced since this LBA's most recent reference. PARDA is extremely efficient as its design philosophy resembles a map-reduce~\cite{} approach. It computes the RD parallely by partitioning the trace into different sections, process it independently, and finally merges them together. 
+In our work, we calculate the Reuse Distance values using the open source implementation of PARDA~\cite{niu_parda:_2012}. PARDA uses a hash table that maps a LBA to its most recent reference, and a splay tree that holds the values of the number of distinct locations referenced since this LBA's most recent reference. PARDA is extremely efficient as its design philosophy resembles a map-reduce~\cite{} approach. It computes the RD in parallel by partitioning the trace into different sections, process it independently, and finally merges them together.
 
 We chose PARDA over other techniques because,
 \begin{enumerate*}
-\item Since we are running a simulation we didn't have the need for online cache optimization decisions that are provided by Counter Stack and SHARDS. 
-\item PARDA provides an accurate Hit Ratio Curves as opposed to approximate curves, and 
-\item PARDA's implementation is open source, and readily available to implement and could be easily intergrated within our system. 
+\item Since we are running a simulation we didn't have the need for online cache optimization decisions that are provided by Counter Stack and SHARDS.
+\item PARDA provides an accurate Hit Ratio Curves as opposed to approximate curves, and
+\item PARDA's implementation is open source, and readily available to implement and could be easily intergrated within our system.
 \end{enumerate*}
 PARDA calculates the HRC curves for both read and write requests. Since, in our work we are interested only in read requests, we pre-processed the input trace to discard all write requests. PARDA also only takes as input all the requests of a LBA, and since our traces from SNIA contain several other details of block I/O traces, we just discard everything except for the LBA requests. \note{Shaohua, can you confirm this?}
 
@@ -28,14 +28,14 @@ PARDA calculates the HRC curves for both read and write requests. Since, in our 
 
  \subsection{Reuse Intensity}
 
-\emph{Reuse Intesity} is used as a measure to capture sudden bursts of hit ratio in a cache. Different VMs will access the cache at different rate and capturing the relative speed of their cache accesses is important. Traditional HRC estimation mechanisms using RD fail to consider the relative access speeds with which different VM accesses the cache. For instance, certain web services, such as stock market providers, capturing quick bursts in trend is vital. To this end, 
+\emph{Reuse Intesity} is used as a measure to capture sudden bursts of hit ratio in a cache. Different VMs will access the cache at different rate and capturing the relative speed of their cache accesses is important. Traditional HRC estimation mechanisms using RD fail to consider the relative access speeds with which different VM accesses the cache. For instance, certain web services, such as stock market providers, capturing quick bursts in trend is vital. To this end,
 
 \begin{equation}
 RI = 1 - \frac{\text{\# unique blocks}}{\text{\# total blocks}}
 \label{eq:ri}
 \end{equation}
 
-captures the sudden bursts in Hit Ratio. The above equation indicates that, more the workload is random, the closer the value of $RI$ will be to 0. For instance, if there is only 9 unique blocks from a workload of 10 block requests, the value of $RI$ will be 0.1. On the other hand, if the workload has a lot of repeated requests to the same block, the value of $RI$ will be close to 1. The value of $RI$ is calculated once every 60 seconds, and can be tuned as a user parameter. The overhead incurred by this calculation is very minimal compared to the other computations in our algorithm. So, calcualting this value in the background/parallely to other computations results in zero overhead. \note{is this statement true? Can we also have an experiment showing why RI is essential? May be have an experiment with sudden spikes and show how RI adapts but RD doesn't}
+captures the sudden bursts in Hit Ratio. The above equation indicates that, more the workload is random, the closer the value of $RI$ will be to 0. For instance, if there is only 9 unique blocks from a workload of 10 block requests, the value of $RI$ will be 0.1. On the other hand, if the workload has a lot of repeated requests to the same block, the value of $RI$ will be close to 1. The value of $RI$ is calculated once every 60 seconds, and can be tuned as a user parameter. The overhead incurred by this calculation is very minimal compared to the other computations in our algorithm. So, calculating this value in the background/in parallel to other computations results in zero overhead. \note{is this statement true? Can we also have an experiment showing why RI is essential? May be have an experiment with sudden spikes and show how RI adapts but RD doesn't}
 
 \subsection{Cache Utility model}
 
@@ -64,4 +64,4 @@ $$ CU_p(c_p) = \frac{l_b}{l_p} \times h_p(c_p) + (\alpha_p \times RI) $$
 $$ CU_s(c_s) = \frac{l_b}{l_s} \times h_s(c_s) + (\alpha_s \times RI) $$
 $$ CU(C) = CU_p(c_p') + CU_s(c_s') + l_b (1 - h_p(c_p') + h_s(c_s')) $$ \note{Did not discuss about this yet.}
 
-We run the optimazation algorithm in two parts/stages. Our solver uses simnulated Annealing algorithm. We split the hit ratio curve into two parts. The division point is the size of the FC. We find the optimal cache space for the VMs for FC. Once we solve for FC, we then solve the ``remaining" i.e. from size(FC) + 1 to size(SC + FC) as shown in figureX.
+We run the optimization algorithm in two parts/stages. Our solver uses Simulated Annealing algorithm. We split the hit ratio curve into two parts. The division point is the size of the FC. We find the optimal cache space for the VMs for FC. Once we solve for FC, we then solve the ``remaining" i.e. from size(FC) + 1 to size(SC + FC) as shown in figureX.
