--- a/Documentation/intro.tex
+++ b/Documentation/intro.tex
@@ -2,7 +2,7 @@
 %     HDD accesses are slow
 %     Number of VMs in a host is every increasing
 %         More contention
-%         Each Vm has different workloads and different priorities
+%         Each VM has different workloads and different priorities
 
 % What is our vision for the perfect world?
 %     Little or no contention between VMs
@@ -23,13 +23,13 @@
 % For a single cache layer, if the cache is very large, would addressing be a problem?
 
 \section{Introduction}
-As the hardware keeps increasing in ``power" the ratio of the number of VMs per host also keeps increasing. A typical host in a datacenter now packs tens to hundreds of VMs on a single host in order to maximize the utilization of the resources in a given host. To this end, hosts are equiped with terabytes of hard disk space and petta bytes of externally attached storage systems.
+As the hardware keeps increasing in ``power" the ratio of the number of VMs per host also keeps increasing. A typical host in a datacenter now packs tens to hundreds of VMs on a single host in order to maximize the utilization of the resources in a given host. To this end, hosts are equipped with Terabytes of hard disk space and Pettabytes of externally attached storage systems.
 
-As a result, we have managed increasing the storage capacity, but the I/O latency and throughput of these devices haven't increased at the same rate. This is due to the hardware limitation of the magnetic devices that are being used as storage devices. Moreover, the number of random I/O operations on these devices tend to decline as the storage capacity increases. To overcome this limitation, studies have been done to analyse the feasibility of replacing the hard disk devices entirely with SSD~\cite{narayanan_migrating_2009}. Instead, a more practical approach that modern datacenters take to speed up the I/O accesses of the VMs is by using flash devices such as SSD's, Pcie SSD's, etc. as a caching device on the hosts.
+As a result, we have managed increasing the storage capacity, but the I/O latency and throughput of these devices haven't increased at the same rate. This is due to the hardware limitation of the magnetic devices that are being used as storage devices. Moreover, the number of random I/O operations on these devices tend to decline as the storage capacity increases. To overcome this limitation, studies have been done to analyse the feasibility of replacing the hard disk devices entirely with SSD~\cite{narayanan_migrating_2009}. Instead, a more practical approach that modern datacenters take to speed up the I/O accesses of the VMs is by using flash devices such as SSD's, PCIe SSD's, etc. as a caching device on the hosts.
 
 Flash storage is expensive and usually flash storage is used for its high I/O access speed more than it is used for storage in the datacenters. While the use of the host side flash caching can improve the speedup significantly, it can also hinder the access if the flash cache is not managed properly. The problem with these systems are that they are throughput oriented and does not take into consideration the access pattern of the VMs. As a result a ``bad" VM with huge number of random I/O that cannot benefit from the cache might end up taking all the cache space, despite there being other interactive VMs that can benefit the most from the cache end up with very less or in some extreme cases no cache space at all. Also, different VM's can have different priorities, and our system should make sure that the workload of the VMs should not influence the priorities or Service Level Agreements (SLA) of the VMs.
 
-A perfect caching technique should avoid contention of I/O amongst the VMs, and should be able to guarentee fine tuned I/O performance for each of the VMs on any given host.
+A perfect caching technique should avoid contention of I/O amongst the VMs, and should be able to guarantee fine tuned I/O performance for each of the VMs on any given host.
 
 In this work we present a simulated multi-tier flash cache based solution that uses multiple flash caches and partitions them dynamically in runtime based on the VMs' workload and priority. Our contributions are:
 \begin{itemize}
