--- a/Documentation/motivation.tex
+++ b/Documentation/motivation.tex
@@ -21,6 +21,10 @@ The motivation for this work are two-fold. First, we show why we need a smart pa
 
 The need for partitioning the SSD cache has been studied in [vCacheShare, ...]. To illustrate we conduct a simple experiment where two VMs, namely VM1 and VM2, residing in the same host share a caching device. From figure XX, one can see that VM1 has a high random I/O with a very low hit ratio while VM2 has a low I/O but has a high hit rate. Figure~\ref{fig:compete} , shows that despite VM2 could benefit largely from a cache, it has a very low space allocation in the cache, due to contention from VM1. From figure XX and YY, one can infer that contention can make a cache entirely unusable.
 
+\subsection{The case for two-layer cache}
+
+An ideal solid-state NVM provides fast random-read and random-write accesses. SSD's prices have dropped significantly over the last decade, though they are still expensive compared to disk drives. So, bearing cost vs. performance tradeoffs in mind, it is essential to choose the right caching device to get the maximum performance. Although, much of it depends on the workload of the VMs in the host, one could optimize the cache \note{make a case for using two layers, instead of one}
+
 \begin{center}
   \begin{tabular}{ | l | l | l | }
     \hline
@@ -32,11 +36,6 @@ The need for partitioning the SSD cache has been studied in [vCacheShare, ...]. 
   \end{tabular}
 \end{center}
 
-An ideal solid-state NVM provides fast random-read and random-write accesses. SSD's prices have dropped significantly over the last decade, though they are still expensive compared to disk drives. So, bearing cost vs. performance tradeoffs in mind, it is essential to choose the right combination of caching devices to get the maximum performance. Although, much of it depends on the workload of the VMs in the host, 
-
-
-
-\subsection{The case for two-layer cache}
 
 As we can see from the figure, there are a number of devices that can be adopted to use as a cache. However the widespread adoption of these devices have always remained slow, mainly because of the difficulty to determine the combination of devices the will give the maximum performance with minimal cost. Another major pain point to utilize these devices efficiently; a bad partitioning strategy would degrade the performance otherwise. The optimization is complex due to the wide variety of devices as well as the workloads in the datacenter.
 
