--- a/cache-simulator/Python/PARDA/README
+++ b/cache-simulator/Python/PARDA/README
@@ -10,6 +10,8 @@ sudo apt-get install glib-2.0
 Step 1: compile the program into so file. 
 gcc -Wall  -O2 -I/usr/include/glib-2.0 -I/usr/lib/i386-linux-gnu/glib-2.0/include   -o parda.so -shared -fPIC splay.c parda.c parda_print.c narray.c -pthread -lgthread-2.0 -lglib-2.0
 
+gcc -Wall  -O2 -I/usr/include/glib-2.0 -I/usr/lib/x86_64-linux-gnu/glib-2.0/include -o parda.so -shared -fPIC splay.c parda.c parda_print.c narray.c -pthread -lgthread-2.0 -lglib-2.0
+
 B) Call the parda.so program in Python
 
 the main function in parda.c is void classical_tree_based_stackdist(char* inputFileName, long lines)
