tim revising intro/abstract

--- a/Documentation/intro.tex
+++ b/Documentation/intro.tex
@@ -23,18 +23,17 @@
 % For a single cache layer, if the cache is very large, would addressing be a problem?
 
 \section{Introduction}
-As the hardware keeps increasing in ``power" the ratio of the number of VMs per host also keeps increasing. A typical host in a datacenter now packs tens to hundreds of VMs on a single host in order to maximize the utilization of the resources in a given host. To this end, hosts are equipped with Terabytes of hard disk space and Pettabytes of externally attached storage systems.
+As hardware increases in power, the number of VMs per host also keeps increasing. A typical host in a datacenter now packs tens to hundreds of VMs on a single host in order to maximize resource utilization---the popular VMware ESX hypervisor has increased the number of VMs supported per machine from XXXX to YYYY in recent years. To support this, hosts are now equipped with Terabytes of hard disk space and Pettabytes of externally attached storage systems.
 
-As a result, we have managed increasing the storage capacity, but the I/O latency and throughput of these devices haven't increased at the same rate. This is due to the hardware limitation of the magnetic devices that are being used as storage devices. Moreover, the number of random I/O operations on these devices tend to decline as the storage capacity increases. To overcome this limitation, studies have been done to analyse the feasibility of replacing the hard disk devices entirely with SSD~\cite{narayanan_migrating_2009}. Instead, a more practical approach that modern datacenters take to speed up the I/O accesses of the VMs is by using flash devices such as SSD's, PCIe SSD's, etc. as a caching device on the hosts.
+While low cost hard drives have allowed data centers to meet this growing capacity, the I/O latency and throughput of these devices have stagnated. This is due to the hardware limitations of magnetic hard disk drives with spinning platters. Moreover, the fraction of random I/O operations on these devices tends to increase as more VMs are consolidated to a host. To overcome this limitation, studies have been done to analyse the feasibility of replacing the hard disk devices entirely with solid state drives (SSDs)~\cite{narayanan_migrating_2009}. Instead, a more practical approach that modern datacenters take to speed up the I/O accesses of the VMs is by using faster drives such as SSDs as caching devices on the hosts.
 
-Flash storage is expensive and usually flash storage is used for its high I/O access speed more than it is used for storage in the datacenters. While the use of the host side flash caching can improve the speedup significantly, it can also hinder the access if the flash cache is not managed properly. The problem with these systems are that they are throughput oriented and does not take into consideration the access pattern of the VMs. As a result a ``bad" VM with huge number of random I/O that cannot benefit from the cache might end up taking all the cache space, despite there being other interactive VMs that can benefit the most from the cache end up with very less or in some extreme cases no cache space at all. Also, different VM's can have different priorities, and our system should make sure that the workload of the VMs should not influence the priorities or Service Level Agreements (SLA) of the VMs.
+In the coming years, a deeper hierarchy of storage devices is expected to emerge, each with differing latency, throughput, price, and capacity characteristics~\cite{storage-hierarchy}. This offers new opportunities for efficiently managing data center storage, but it also complicates the picture by providing a diverse set of options to choose from. Building an efficient caching system is further compounded by the varied workload needs of different VMs. As a result a poor locality VM with a huge number of random I/Os that cannot benefit from a cache might end up greedily taking all the cache space, despite there being other VMs that could benefit more highly. Also, different VMs can have different priorities, so a cache management system should ensure that interference does not impact the Service Level Agreements (SLA) of the VMs.
 
-A perfect caching technique should avoid contention of I/O amongst the VMs, and should be able to guarantee fine tuned I/O performance for each of the VMs on any given host.
+% A perfect caching technique should avoid contention of I/O amongst the VMs, and should be able to guarantee fine tuned I/O performance for each of the VMs on any given host.
 
-In this work we present a simulated multi-tier flash cache based solution that uses multiple flash caches and partitions them dynamically in runtime based on the VMs' workload and priority. Our contributions are:
+In this work we present a multi-tier cache management solution that dynamically partitions a set of storage devices at runtime based on the VMs' workload and priority. Our contributions are:
 \begin{itemize}
-\item A cache partitioning algorithm that partitions two-level caches simultaneously at runtime based on individual VMs' workload and priority.
-\item A formulation of a cache utility model to classify the workload of individual VMs.
-\item An optimization formulation to maximize the efficiency and usage of the two-tier caching model.
-\item A simulation platform to experiment two different cache devices of varying throughput and latency.
+\item Workload characterization and cache utility models that predict how different VMs will benefit from each tier in the cache.
+\item A cache partitioning algorithm that partitions the cache layers at runtime to maximize overall performance and account for priority levels.
+\item A simulation platform to evaluate our cache partitioning algorithm on cache devices of varying throughput and latency.
 \end{itemize}
