--- a/Documentation/abstract.tex
+++ b/Documentation/abstract.tex
@@ -1,3 +1,4 @@
-A typical datacenter today hosts tens of hundreds of VMs on a single physical machine, backed up by storage devices with hundreds of Gigabytes to Terabytes in size. Data center vendors usually use hard disk drives for their back-end storage as it is cheap and reliable. The disadvantage of this type of storage is that the I/O accesses to these devices is very slow and are not suitable for applications requiring low latency such as interactive applications.
+A typical datacenter today hosts tens to hundreds of virtual machines (VMs) on each physical machine, backed by storage devices with hundreds of Gigabytes to Terabytes in size. Data center vendors usually use hard disk drives for their back-end storage as it is cheap and reliable. However, the high contention from many VMs can lead to very slow I/O accesses, which may not be suitable for interactive applications requiring low latency.
 
-In this paper we present Flash Cache, a simulation of a two-layer flash based caching technique, that uses a combination of and two devices of varied speed and cost such as SSD, PCIE SSD, NVM, etc. for caching. Our algorithm partitions the two caches dynamically on runtime according to the VMs workload and their priority. We use a heuristic optimization technique that ensures maximum utilization of the two caches resulting in a high hit rate. We use a weighted LRU cache eviction policy that demonstrates latency improvement up to YY times and throughput by ZZ times for a cost of \$K per GB of cache; a XX times overall improvement compared to naive algorithms.
+In this paper we present Multi-Cache, a multi-layer cache management system that uses a combination of cache devices of varied speed and cost such as solid state drives, non-volatile memories, etc. Multi-Cache partitions each device dynamically at runtime according to the workload of each VM and its priority. We use a heuristic optimization technique that ensures maximum utilization of the two caches resulting in a high hit rate.
+We use a weighted LRU cache eviction policy that demonstrates latency improvement up to YY times and throughput by ZZ times for a cost of \$K per GB of cache; a XX times overall improvement compared to naive algorithms.
