--- a/cache-simulator/Python/PARDA/README
+++ b/cache-simulator/Python/PARDA/README
@@ -1,14 +1,24 @@
 This program is a sequential Parda implementation on file input.
 
-Instructions to run file input Parda. 
+Instructions to run file input Parda.
 
 A) Setup and compile
 
 Step 0: parda use glib standard linux library. If on ubuntu system just execute following sudo command.
 sudo apt-get install glib-2.0
 
-Step 1: compile the program into so file. 
+Step 1: compile the program into .so file.
+
+
+gcc -Wall -O2 `pkg-config --cflags --libs glib-2.0`  -o parda.so -shared -fPIC splay.c parda.c parda_print.c narray.c -pthread -lgthread-2.0 -lglib-2.0
+
+OR
+
+For 32-bit arch:
+
 gcc -Wall  -O2 -I/usr/include/glib-2.0 -I/usr/lib/i386-linux-gnu/glib-2.0/include   -o parda.so -shared -fPIC splay.c parda.c parda_print.c narray.c -pthread -lgthread-2.0 -lglib-2.0
+
+For 64 bit arch:
 
 gcc -Wall  -O2 -I/usr/include/glib-2.0 -I/usr/lib/x86_64-linux-gnu/glib-2.0/include -o parda.so -shared -fPIC splay.c parda.c parda_print.c narray.c -pthread -lgthread-2.0 -lglib-2.0
 
@@ -18,6 +28,6 @@ the main function in parda.c is void classical_tree_based_stackdist(char* inputF
 
 --inputFileName: the input trace file name.
 
---lines: the total number of lines in the input trace file. 
+--lines: the total number of lines in the input trace file.
 
 Reference: https://bitbucket.org/niuqingpeng/file_parda
